--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,15 @@
-<div id="clearance" class="sign-up">
-  <h2><%= t('.title') %></h2>
+<div id="clearance" class="sign-up row">
+  <h2 class="column medium-6 medium-centered"><%= t('.title') %></h2>
 
-  <%= form_for @user do |form| %>
+  <%= form_for @user, :html => {:class => 'column medium-6 medium-centered'} do |form| %>
     <%= render :partial => '/users/form', :object => form %>
 
     <div class="submit-field">
-      <%= form.submit %>
+      <%= form.submit :class => "button" %>
     </div>
 
     <div class="other-links">
-      <%= link_to t('.sign_in'), sign_in_path %>
+      <p>Already have an account? <%= link_to t('.sign_in'), sign_in_path %></p>
     </div>
   <% end %>
 </div>
