--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -11,7 +11,7 @@
 						<%= image_tag image.image.url(:square) %>
 					</a>
 					<div class="panel">
-						<a href="<%= image_path(image) %>"><h3><%= image.title %></h3></a>
+						<a href="<%= image_path(image) %>"><h3 class="truncate"><%= image.title %></h3></a>
 					</div>
 				</div>
 			<% end %>
