--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="edit row">
   <h2 class="column medium-6 medium-centered">Edit Account</h2>
   <%= form_for :user, url: user_path(current_user), :html => {:class => 'column medium-6 medium-centered'}, method: :patch do |f| %>
-    <%= f.label :avatar %>
-    <%= image_tag @user.avatar.url %>
+    <%= f.label :avatar, 'Avatar' %>
+    <%= image_tag resolve_user_avatar(@user) %>
     <%= f.file_field :avatar %>
-    <%= f.label 'Full name' %>
+    <%= f.label :fullname, 'Full name' %>
     <%= f.text_field :fullname %>
 
     <div class="submit-field">
