Changed page titles.

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,3 +1,4 @@
+<% title 'Upload Image' %>
 <div class="row">
 	<h1 class="columns medium-6 medium-centered">Upload an image</h1>
 	<%= form_for :image, :html => {:class => 'column medium-6 medium-centered'}, url: images_path do |f| %>
