--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% title 'Sign Up' %>
 <div id="clearance" class="sign-up row">
   <h2 class="column medium-6 medium-centered"><%= t('.title') %></h2>
 
