--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,3 +1,4 @@
+<% title 'Edit Image' %>
 <%= form_for :image, url: image_path(@image), method: :patch do |f| %>
 <div class="row">
 	<div class="column">
