Fixed image editing. Data URI with edited image now handled correctly by server.

--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -12,7 +12,7 @@
     <p>Description:</p>
     <p><%= f.text_area :description, size:"30x2" %></p>
     <ul class="small-block-grid-2">
-      <li><button data-submit-path="<%= image_path(@image) %>" class="button expand" id="somethingelse">Save</button></li>
+      <li><button data-submit-path="<%= image_path(@image) %>" class="button expand" id="submit">Save</button></li>
       <li><%= link_to 'Cancel', image_path(@image), :class => 'button expand alert' %></li>
     </ul>
 
