--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,6 +1,6 @@
 <% title 'Images' %>
 <div class="row">
-	<h1 class="column">Images</h1>
+	<h1 class="column"><%= image_tag resolve_user_avatar(@user), :class => "avatar" %> <%= @user.fullname %>'s Images</h1>
 	<div class="column medium-4 end">
 		<%= link_to 'Upload', new_image_path, html_options = { :class => 'button expand' } %>
 	</div>
